feat(tagsInput): enforce max tags
Disables and hides the input box when max-tags is reached.
Items can still be removed using backspace within a
focused input area.

Closes #254
Closes #283
Closes #297

--- a/test/test-page.html
+++ b/test/test-page.html
@@ -49,6 +49,11 @@
         <auto-complete source="loadItems($query)" load-on-down-arrow="true"></auto-complete>
     </tags-input>
     <p></p>
+    Max tags enforced (3):
+    <tags-input ng-model="tags" max-tags="3" enforce-max-tags="true">
+        <auto-complete source="loadItems($query)" load-on-focus="true" load-on-down-arrow="true"></auto-complete>
+    </tags-input>
+    <p></p>
     <div class="input-group" style="width: 600px">
         <span class="input-group-addon">@</span>
         <tags-input ng-model="tags">
